2008-01-02 Paolo Nenzi <p.nenzi@ieee.org>
 * src/frontend/rawfile.c: Fixed rawfile ascii generation. The prevoius patch
   produced incorrect string like v(v(1)) for v(1) in the output file. 

2007-12-31 Holger Vogt
 * src/frontend/com_chdir.c: fix for the crashing of ngspice under Windows when
   started from windows explorer.
 * src/frontend/inp.c: ngspice crashed when executing a file consisting of a simple
   control section. Fixed.

2007-12-29 Dietmar Warning
 * src/frontend/inpcom.c: 3/4 terminal recognition for bjt's
 * src/misc/string.c, stringutil.h: token function for bjt instance

2007-12-29 Holger Vogt
 * src/frontend/runcoms.c, runcoms2.c: backup the filetype problem if set in spinit
 * src/frontend/inpcom.c: no param handling for "set" commands

2007-12-27 Dietmar Warning
 * src/spicelib/devices/*/*init.c: No usage of C99 Designated Initializers
 * src/spicelib/devices/*/*par.c: only formatting issues
 * src/frontend/numparam/*.c: fixing memory problems in nupa_substitute and other
 * src/frontend/dotcard.c: strip white spaces only inside parens
 * src/misc/missing_math.*: AlmostEqualUlps in double is needed

2007-12-26 Paolo Nenzi <p.nenzi@ieee.org>
 * src/frontend/numparam/*: downgraded all files to standard C syntax with 
   the included washprog.c tool.

2007-12-14 Dietmar Warning
 * configure.in, src/spicelib/devices/dev.c: allow mingw build w/o GUI

2007-12-14 Holger Vogt
 * src/frontend/runcoms.c, runcoms2.c: fix the filetype problem if set in spinit

2007-12-15 Steven Borley
 * Added automake warning and output verbosity to autogen.sh
 * src/frontend/spiceif.c: Avoid invalid lvalue assignment errors when
   calling the macro _foo(). Needed for gcc4 which no longer supports
   lvalue cast bogosity. Fixes bug 1584784.

2007-12-14  Steven Borley
 * Added missing .cvsignore file to the tests directories and some
   devices directories, and updated for change from makeidx to ngmakeidx

2007-12-13 Steven Borley